# irq_affinity

./: .gitignore  CLAUDE.md  LICENSE  README.md  irq.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
systemd/: irq-affinity.service
tests/: test_irq.py
